retrieveUnpackaged/objects/Canteen_Customer__c.object
<CustomObject>
    <fields>
        <fullName>Address_of_customer__c</fullName>
        <label>Address of customer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>College_Id__c</fullName>
        <label>College Id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <displayFormat>Cust-{0000}</displayFormat>
        <label>Customer ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Emailid_of_customer__c</fullName>
        <label>Emailid of customer</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_no__c</fullName>
        <label>Phone no</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>comments__c</fullName>
        <label>comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Canteen Customer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>customer canteen Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Canteen Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>emailid_must_be_valid</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Emailid_of_customer__c )</errorConditionFormula>
        <errorDisplayField>Emailid_of_customer__c</errorDisplayField>
        <errorMessage>emailid_must_be_valid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>enter_ur_10_digit_college_id_for_order</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(College_Id__c)</errorConditionFormula>
        <errorDisplayField>College_Id__c</errorDisplayField>
        <errorMessage>College id is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>must_be_combiation_of_number_alphabet</fullName>
        <active>true</active>
        <errorConditionFormula>REGEX( Password__c , &quot;[a-z]{5}[0-9]{5}&quot;)</errorConditionFormula>
        <errorDisplayField>Password__c</errorDisplayField>
        <errorMessage>must_be_combiation_of_number_alphabet</errorMessage>
    </validationRules>
</CustomObject>